# cerespy-docker

./: Dockerfile  LICENSE  README.md
hello_boost_numpy/: CMakeLists.txt  mymodule.cc  mymodule_test.py
hello_ceres/: CMakeLists.txt  helloceres.cc
